--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,141 @@
-{\rtf1\ansi\ansicpg1252\cocoartf2707
-\cocoatextscaling0\cocoaplatform0{\fonttbl\f0\fswiss\fcharset0 Helvetica;}
-{\colortbl;\red255\green255\blue255;}
-{\*\expandedcolortbl;;}
-\margl1440\margr1440\vieww4360\viewh18000\viewkind0
-\pard\tx720\tx1440\tx2160\tx2880\tx3600\tx4320\tx5040\tx5760\tx6480\tx7200\tx7920\tx8640\pardirnatural\partightenfactor0
-
-\f0\fs24 \cf0 streamlit==0.93.0\
-pandas==1.3.4\
-numpy==1.21.3\
-yfinance==0.1.63\
-matplotlib==3.4.3\
-plotly==5.5.0\
-datetime==4.3\
-}
+altair==4.2.0
+anyio==3.6.2
+appdirs==1.4.4
+appnope==0.1.3
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+asttokens==2.1.0
+attrs==22.1.0
+backcall==0.2.0
+beautifulsoup4==4.11.1
+bleach==5.0.1
+blinker==1.5
+branca==0.6.0
+cachetools==5.2.0
+certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_0ek9yztvu3/croot/certifi_1665076692562/work/certifi
+cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+commonmark==0.9.1
+cryptography==40.0.1
+cycler @ file:///tmp/build/80754af9/cycler_1637851556182/work
+dateutils==0.6.12
+debugpy==1.6.3
+decorator==5.1.1
+defusedxml==0.7.1
+descartes @ file:///Users/ktietz/demo/mc3/conda-bld/descartes_1630659560270/work
+entrypoints==0.4
+executing==1.2.0
+fastjsonschema==2.16.2
+filelock==3.8.0
+Fiona==1.8.22
+folium==0.13.0
+fonttools==4.25.0
+frozendict==2.3.6
+fundamentalanalysis==0.2.14
+geopandas==0.12.1
+gitdb==4.0.9
+GitPython==3.1.29
+html5lib==1.1
+huggingface-hub==0.11.0
+idna==3.4
+importlib-metadata==5.0.0
+ipykernel==6.17.0
+ipython==8.6.0
+ipython-genutils==0.2.0
+ipywidgets==7.7.2
+jedi==0.18.1
+Jinja2==3.1.2
+jsonschema==4.17.0
+jupyter==1.0.0
+jupyter-console==6.4.4
+jupyter-server==1.23.0
+jupyter_client==7.4.4
+jupyter_core==4.11.2
+jupyterlab-pygments==0.2.2
+jupyterlab-widgets==1.1.1
+keplergl==0.3.2
+kiwisolver @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_ca2945cc-8f2f-407b-8e24-f05d29ee2f4fvto5sdlk/croots/recipe/kiwisolver_1653292053344/work
+lxml==4.9.2
+MarkupSafe==2.1.1
+matplotlib @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_dahyf88w88/croot/matplotlib-suite_1667356719360/work
+matplotlib-inline==0.1.6
+mistune==2.0.4
+mkl-fft==1.3.1
+mkl-random @ file:///opt/concourse/worker/volumes/live/0cda23d8-7460-44b2-7e5d-3c76a8a0ca7e/volume/mkl_random_1626186083266/work
+mkl-service==2.4.0
+multitasking==0.0.11
+munch==2.5.0
+munkres==1.1.4
+nbclassic==0.4.8
+nbclient==0.7.0
+nbconvert==7.2.3
+nbformat==5.7.0
+nest-asyncio==1.5.6
+notebook==6.5.2
+notebook_shim==0.2.2
+nsetools==1.0.11
+numpy==1.23.4
+packaging @ file:///tmp/build/80754af9/packaging_1637314298585/work
+pandas==1.5.1
+pandocfilters==1.5.0
+parso==0.8.3
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==9.3.0
+prometheus-client==0.15.0
+prompt-toolkit==3.0.32
+protobuf==3.20.3
+psutil==5.9.4
+ptyprocess==0.7.0
+pure-eval==0.2.2
+pyarrow==10.0.0
+pycparser==2.21
+pydeck==0.8.0b4
+Pygments==2.13.0
+Pympler==1.0.1
+pyparsing @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_3a17y2delq/croots/recipe/pyparsing_1661452538853/work
+pyproj==3.4.0
+pyrsistent==0.19.1
+python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+pytz==2022.6
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+pyzmq==24.0.1
+qtconsole==5.4.0
+QtPy==2.3.0
+requests==2.28.1
+rich==12.6.0
+semver==2.13.0
+Send2Trash==1.8.0
+Shapely==1.8.5.post1
+simfin==0.9.0
+six @ file:///tmp/build/80754af9/six_1644875935023/work
+smmap==5.0.0
+sniffio==1.3.0
+soupsieve==2.3.2.post1
+stack-data==0.6.0
+streamlit==1.14.0
+streamlit-disqus==0.1.3
+terminado==0.17.0
+tinycss2==1.2.1
+toml==0.10.2
+toolz==0.12.0
+tornado==6.2
+tqdm==4.64.1
+traitlets==5.5.0
+traittypes==0.2.1
+typing_extensions==4.4.0
+tzdata==2022.6
+tzlocal==4.2
+urllib3==1.26.12
+validators==0.20.0
+wcwidth==0.2.5
+webencodings==0.5.1
+websocket-client==1.4.2
+widgetsnbextension==3.6.1
+yahoofinancials==1.14
+yfinance==0.2.14
+zipp==3.10.0
