--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ bleach==5.0.1
 blinker==1.5
 branca==0.6.0
 cachetools==5.2.0
-certifi @ file:///private/var/folders/sy/f16zz6x50xz3113nwtb9bvq00000gp/T/abs_0ek9yztvu3/croot/certifi_1665076692562/work/certifi
+certifi 
 cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
